@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: https://www.guidovanderleest.nl/darkelements
-Version: 5.9
+Version: 6.0
 Author: Guido van der Leest
 Author URI: https://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
@@ -59,7 +59,7 @@ table {
 
 
 /* BODY AND CONTAINER */
-body {background:#333; color:#ddd; font-family:'Open Sans', sans-serif; font-size:15px; line-height:1.5; text-align:left; word-wrap:break-word;}
+body {-webkit-text-size-adjust:100%; background:#333; color:#ddd; font-family:'Open Sans', sans-serif; font-size:15px; line-height:1.5; text-align:left; word-wrap:break-word;}
 #container {max-width:1000px; position:relative; margin:20px 0 20px 20px;}
 #container:after {content:''; display:block; height:0; clear:both;}
 
@@ -122,7 +122,7 @@ input[type="submit"], input[type="reset"], input[type="button"], button {cursor:
 input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover, button:hover {background:#e77776; color:#ddd;}
 input[type="checkbox"] {-webkit-appearance:checkbox; -moz-appearance:checkbox;}
 input[type="radio"] {-webkit-appearance:radio; -moz-appearance:radio;}
-select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist; background:#fff; color:#333;}
+select {-webkit-appearance:menulist; -moz-appearance:menulist; max-width:100%; background:#fff; color:#333;}
 button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
@@ -232,12 +232,11 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 .wp-post-image, .single-image {float:left; margin:0.4em 1em 0.4em 0;}
 
-.wp-caption {max-width:100%;}
 .wp-caption-text {text-align:center;}
 
+.gallery-item {margin:0 0 10px !important;}
 .gallery img {border:0 !important;}
-.gallery dl, .gallery dt, .gallery dd {margin:0; padding:0;}
-.gallery-caption {max-width:100%; text-align:center;}
+.gallery-caption {margin:0 !important;}
 
 
 /* SEARCHFORM */
@@ -298,7 +297,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	/* BODY AND CONTAINER */
 	body {font-size:15px; line-height:1.5;}
 	body.custom-background {background-image:none !important;}
-	#container {width:96%; padding:10px 2%; margin:0 auto 0; background:#333 url('images/back.png');}
+	#container {width:96%; padding:10px 2%; margin:0 auto; background:#333 url('images/back.png');}
 
 	/* MAIN CONTENT AREA */
 	#content {width:100%; clear:both; float:left; padding:10px 0 20px; background:none;}
@@ -333,7 +332,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	#header-image-mobile {display:block; width:100%; float:left; margin:0 0 20px;}
 
 	/* IMAGES */
-	.wp-post-image, .single-image {width:50%; margin:0.3em 0.5em 0.3em 0;}
+	.wp-post-image, .single-image {max-width:50%;}
 
 	/* FOOTER */
 	#footer {width:100%; clear:both; float:left; padding:0; margin:0; background:none;}
