@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+DarkElements version 6.0 - february 2018
+- several small adjustments
+- updated files style and custom-editor-style
+
 DarkElements version 5.9 - february 2018
 - several small adjustments
 - updated file style and functions
